--- a/site/_config.yml
+++ b/site/_config.yml
@@ -26,7 +26,7 @@ categories: [blog, news]
 front_page_news: 5
 
 # Base pathname for links.
-base: 'https://crail.incubator.apache.org'
+base: 'https://craillabs.github.io'
 #base: '//127.0.0.1:4000/'
 
 
