--- a/site/Makefile
+++ b/site/Makefile
@@ -18,7 +18,7 @@ _site/index.html: $(wildcard *.html) _config.yml _layouts/default.html
 clean:
 	$(RM) -r _site 
 
-HOST := https://crail.incubator.apache.org
+HOST := https://craillabs.github.io
 PATHSVR := www/
 deploy: clean all
 	rsync --compress --recursive --checksum --itemize-changes --delete -e ssh _site/ $(HOST):$(PATHSVR)
